# AriaAssistant

./: .gitignore  AGENTS.md  Aria.glb.import  Aria.vrm.import  AriaAssistant.csproj  Aria_N00_000_00_HairBack_00_nml.png.import  Aria_N00_000_Hair_00_nml.png.import  Aria_Shader_NoneBlack.png.import  Aria_Shader_NoneNormal.png.import  Aria__01.png.import  Aria__02.png.import  Aria__03.png.import  Aria__04.png.import  Aria__05.png.import  Aria__06.png.import  Aria__07.png.import  Aria__08.png.import  Aria__09.png.import  Aria__10.png.import  Aria__11.png.import  Aria__12.png.import  Aria__13.png.import  Aria__14.png.import  Aria__15.png.import  Aria__16.png.import  Aria__17.png.import  Aria_texture_0.png.import  LICENSE  PERSONAPLEX_NOTES.md  README.md  README_PC1.md  README_PC2.md  README_SINGLE_PC.md  SETTINGS.md  install_pc1_main.ps1  install_pc2_ai.ps1  install_single_pc.ps1  project.godot  start_aria.ps1  start_aria_server.ps1
brain/: .env  .env.example  README.md  dashboard.py  mood.json  pyproject.toml  setup_chromadb_pc2.ps1  smoke_test.py  smoke_test_drift.py  smoke_test_server.py  smoke_test_shutdown.py  test_mood.json
brain/chroma_local/: chroma.sqlite3
brain/chroma_local/_backup_chroma_local/: chroma.sqlite3
brain/src/aria_brain/: __init__.py  brain.py  chat_window.py  config.py  llm.py  main.py  memory.py  mood.py  personality.py  reflection.py  server.py  telegram_bot.py  tray.py  tts.py  voice.py
watchdog/: .env.example  README.md  logs.txt  pyproject.toml  smoke_test.py
watchdog/knowledge/: known_fixes.yaml  services.yaml
watchdog/src/aisistant/: config.py  crew.py  flow.py  main.py  runner.py  schemas.py
watchdog/src/aisistant/config/: agents.yaml  tasks.yaml
watchdog/src/aisistant/tools/: __init__.py  action_executor.py  kb_search.py  kb_writer.py  (+5 more)
(+10841 files in other folders)
