[project]
name = "aria_brain"
version = "0.1.0"
description = "Aria Brain — personality, memory, mood, reflection engine for AriaAssistant"
authors = [{ name = "Aria Project" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "httpx>=0.27,<1.0",
    "pydantic>=2.6,<3.0",
    "apscheduler>=3.10,<4.0",
    "python-dotenv>=1.0,<2.0",
    "chromadb>=0.5,<0.6",
    "pystray>=0.19,<1.0",
    "Pillow>=10.0,<12.0",
    "PyQt6>=6.6,<7.0",
    # Phase 3 — voice (Whisper STT, mic recording, global hotkey)
    "faster-whisper>=1.0,<2.0",
    "sounddevice>=0.4,<1.0",
    "numpy>=1.26,<3.0",
    "keyboard>=0.13,<1.0",
    # Phase 3 — Telegram
    "python-telegram-bot>=21.0,<22.0",
]

[project.scripts]
aria_brain = "aria_brain.main:run"
aria_brain_tray = "aria_brain.tray:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aria_brain"]