[project]
name = "aisistant"
version = "0.1.0"
description = "Aria autonomous backend maintenance crew"
authors = [{ name = "Aria Project" }]
requires-python = ">=3.10"
dependencies = [
    "crewai[tools]==1.14.7",
    "litellm>=1.51,<2.0",
    "httpx>=0.27,<1.0",
    "psutil>=5.9,<7.0",
    "pyyaml>=6.0,<7.0",
    "pydantic>=2.6,<3.0",
]

[project.scripts]
aisistant = "aisistant.main:run"
run_crew = "aisistant.main:run"
train = "aisistant.main:train"
replay = "aisistant.main:replay"
test = "aisistant.main:test"
run_with_trigger = "aisistant.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
